1. rewrote the subfolders dialog which now only retrieves the folders at the    given level, not everything recursively: now it finally became usable 2. fixed MailFolderCC::ListFolders for MH 3. added "attrib" field to ResultFolderExists which can be examined for    LATT_NOSELECT/NOINFERIORS flags 4. fixed appearance of MProgressInfo

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+21.07.00 VZ: completely rewrote subfoldrs dialog which is now *much* faster
 19.07.00 VZ: it is possible to specify several address which should be replaced
              with the destination address when the corresponding option is on
 18.07.00 VZ: fixed serious bug in handling options changes, they are now
