--- a/locale/fr.po
+++ b/locale/fr.po
@@ -5725,7 +5725,7 @@ msgstr ""
 
 #: MImport.cpp:266
 #, fuzzy, c-format
-msgid "Importing %s settings failed."
+msgid "Importing from %s failed."
 msgstr "La sauvegarde de message(s) a échoué."
 
 #: MImport.cpp:351
