--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+11.08.00 VZ: new option for not quoting the empty lines in reply
 06.08.00 KB: added printing to filter functions
              renamed configure options back to --with instead of --enable
              changed handling of --with-experimental to allow multiple
