--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 (next release) on (date of next release)
+21.08.00 KB: made install wizard explain more and always creates the INBOX
+             default folder for IMAP servers added warning about browsing
+             taking very long
 16.08.00 VZ: install wizard now creates all IMAP folders in the folder tree
 11.08.00 VZ: new option for not quoting the empty lines in reply
 06.08.00 KB: added printing to filter functions
