--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 (next release) on (date of next release)
+24.08.00 VZ: added "remove identity" command, it is now possible to set
+             signature/X-face and other composition parameters for each identity
+             separately
 24.08.00 KB: rpm generation and SuSE compilation work now (export RPM_ROOT= 
              and if required make a link to it from the default location).
              Added support for PAM under Linux to configure.
