--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -40,7 +40,7 @@ for Version 0.60
 \begin_inset Quotes eld
 \end_inset 
 
-???
+Redmond
 \begin_inset Quotes erd
 \end_inset 
 
@@ -53,13 +53,13 @@ Copyright 1997-2000 by The Mahogany Development Team
 \newline 
 
 \family typewriter 
-http://www.wxwindows.org/Mahogany/
+http://mahogany.sourceforge.net/
 \family default 
 
 \newline 
 
 \family typewriter 
-<m-developers@egroups.com>
+<mahogany-developers@lists.sourceforge.net>
 \layout Standard
 
 
@@ -643,7 +643,7 @@ When you start Mahogany for the first time, it will display the license
  If you have any questions about the license or want to otherwise comment
  on it, please email the development team at 
 \family typewriter 
-m-developers@egroups.com
+mahogany-developers@lists.sourceforge.net
 \family default 
  .
 \layout Subsection
@@ -3499,6 +3499,82 @@ Path where to find AFM files
 To properly scale printing under Unix, Mahogany needs access to a set of
  AFM files.
  The searchpath where to look for them can be modified here.
+\layout Itemize
+
+
+\series bold 
+Remote configuration synchronisation settings
+\newline 
+
+\series default 
+Please refer to the section below for a detailed explanation.
+\layout Subsection
+
+Remot configuration synchronisation
+\layout Standard
+
+Mahogany can automatically save a subset of its configuration settings in
+ a mailbox at program exit and automatically retrieve that information the
+ next time it is started up.
+ This option becomes useful if you are using the program from different
+ systems, e.g.
+ if sometimes from the office and some other times from home over a dialup
+ link.
+ In this case, you can save some settings in a special IMAP mailbox and
+ tell the program to use this for some of the settings.
+ Like that, you can share the program settings no matter from where you
+ run Mahogany and you do not need to manually adjust both configurations.
+\layout Standard
+
+To use this option, first create a mailbox on an IMAP server.
+ Do not use a POP3 server, as the program cannot store information via POP3,
+ IMAP is required for this to work.
+ Then, activate the 
+\begin_inset Quotes eld
+\end_inset 
+
+Sync options with remote server
+\begin_inset Quotes erd
+\end_inset 
+
+ setting and choose which settings you wish to share.
+ Currently supported are:
+\layout Itemize
+
+
+\series bold 
+Sync Filter Rules
+\series default 
+: This keeps the global list of all filter rules synchronised via the IMAP
+ mailbox.
+ Very useful if you want to use the same set of filter rules no matter where
+ you run Mahogany.
+\layout Itemize
+
+
+\series bold 
+Sync Identities
+\series default 
+: This keeps the list of available identity settings synchronised.
+ Be careful: some things such as server settings might cause problems if
+ they are used on a machine with different network settings.
+\layout Itemize
+
+
+\series bold 
+Sync part of the folder tree
+\series default 
+: This allows you to synchronise a complete sub-tree of the mailbox/folder
+ tree.
+ Activate this and pick a group of folders from the tree (Click on the [>>]
+ button to choose one.) and this tree of folders will be available no matter
+ from where you run Mahogany.
+ Note: this only makes sense if the folder group contains networked folders
+ which are accessible from both machines.
+ It synchronises configuration information, not folder contents.
+ So you cannot access a mailbox file residing on one machine via this mechanism,
+ but you can share configuration entries for remote mailboxes, such as IMAP,
+ POP3 or newsgroups.
 \layout Subsection
 
 Some Other Dialogs You May Encounter
@@ -4995,165 +5071,28 @@ on about development and the last releases.
 \latex latex 
 
 \backslash 
-htmladdnormallinkfoot{Mahogany Homepage}{http://www.phy.hw.ac.uk/~karsten/M/}
+htmladdnormallinkfoot{Mahogany Homepage}{http://mahogany.sourceforge.net/}
 \layout Section
 
 Mailing Lists
 \layout Standard
 
-Currently there exist three different mailing lists to help support Mahogany
- users:
-\layout Paragraph
-
-m-announce:
-\layout Itemize
-
-M-announce is a moderated list which distributes announcements of new releases
- of Mahogany.
- It is a low volume mailing list.
-\layout Itemize
-
-To subscribe send an e-mail to: 
+Several mailing lists exist to contact the developers, to receive updates
+ of new releases and to exchange information and experiences with other
+ users.
+ Please visit the 
 \latex latex 
 
 \backslash 
-htmladdnormallinkfoot{m-announce-subscribe@egroups.com}{mailto:m-announce-subscri
-be@egroups.com}
-\layout Itemize
-
-To unsubscribe send an e-mail t
-\latex latex 
-o: 
-\backslash 
-htmladdnormallinkfoot{m-announce-unsubscribe@egroups.com}{mailto:m-announce-unsub
-scribe@egroups.com}
+htmladdnormallinkfoot{Mahogany Project Page}{http://sourceforge.net/projects/maho
+gany}
+\latex default 
+for more information and to join the lists.
 \layout Standard
 
-m-users:
-\layout Itemize
-
-M-Users is an unmoderated list for users of Mahogany to discuss problems
- and enhancements.
- All announcements will be sent to this list, too.
- It carries any kind of general discussion about Mahogany.
- If you just have simple questions which might not constitute a real bug
- report, try asking for help on m-users.
-\layout Itemize
-
-To subscribe send an e-mail to: 
-\latex latex 
-
-\backslash 
-htmladdnormallinkfoot{m-users-subscribe@egroups.com}{mailto:m-users-subscribe@egr
-oups.com}
-\layout Itemize
-
-To unsubscribe send an e-mail to:
-\latex latex 
- 
-\backslash 
-htmladdnormallinkfoot{m-users-unsubscribe@egroups.com}{mailto:m-users-unsubscribe
-@egroups.com}
-\layout Standard
-
-m-developers:
-\layout Itemize
-
-M-developers is a moderated mailing list for the people involved in Mahogany's
- development and testing.
- There are generally two reasons why you would want to send an e-mail here:
- 
-\latex latex 
-
-\backslash 
-htmladdnormallinkfoot{m-developers@egroups.com}{mailto:m-developers@egroups.com}
-\begin_deeper 
-\layout Enumerate
-
-You have discovered a bug or problem in Mahogany and want to tell the developers
- about, or, even better, you want to submit a patch to fix it.
-\layout Enumerate
-
-You want to help develop, translate or test Mahogany.
- This is highly welcome and encouraged.
- Please, if you want to add a feature, get in touch with us.
-\end_deeper 
-\layout Itemize
-
-If you want to contact the developers, send an e-mail to the address above.
-\layout Itemize
-
-Subscription to this list is by invitation only.
- If you would like to join the team, contact the developers and we will
- be happy to add you to the list.
-\layout Paragraph
-
-Subscribe Directly
-\layout Standard
-
-If your help browser understands HTML forms, you will find to forms below
- where you can directly subscribe to the support mailing lists.
-\layout Standard
-
-
-\latex latex 
-
-\backslash 
-begin{rawhtml}<form method=GET action="http://www.egroups.com/cgi-bin/subscribe.py"
-><input 
-\protected_separator 
-type=hidden name="listname" value="m-announce"><table BORDER=0 CELLSPACING=0
- BGCOLOR="#000000" ><tr><td><table BORDER=0 CELLSPACING=0 CELLPADDING=3
- WIDTH="300" BGCOLOR="#FFFFCC" ><tr><td ALIGN=CENTER BGCOLOR="#000000"><b><fontf
-ace="arial,helvetica"><font color="#FFFFFF">Subscribe to M-announcements
- list&nbsp;</font></font></b></td></tr><tr><td>Enter your e-mail address:&nbsp;<
-/td></tr><tr><td><input type=text name="emailaddr" value="your e-mail" size=21><
-input type=submit name="SubmitAction" VALUE="Subscribe"></td></tr><tr><td><a
- href="http://www.egroups.com/list/m-annouce/">FindMail List Archive</a></td></tr>
-<tr><td><font face="arial,helvetica"><font size=-1>A mailing list hosted
- by<a href="http://www.makelist.com/">MakeList!</a></font></font></td></tr></table
-></td></tr></table> </form>
-\backslash 
-end{rawhtml}
-\layout Standard
-
-
-\latex latex 
-
-\backslash 
-begin{rawhtml}<form method=GET action="http://www.egroups.com/cgi-bin/subscribe.py"
-><input 
-\protected_separator 
-type=hidden name="listname" value="m-users BORDER=0 CELLSPACING=0 BGCOLOR="#0000
-00" ><tr><td><table BORDER=0 CELLSPACING=0 CELLPADDING=3 WIDTH="300" BGCOLOR="#F
-FFFCC" ><tr><td ALIGN=CENTER BGCOLOR="#000000"><b><fontface="arial,helvetica"><f
-ont color="#FFFFFF">Subscribe to M-users for1um&nbsp;</font></font></b></td></tr
-><tr><td>Enter your e-mail address:&nbsp;</td></tr><tr><td><input type=text
- name="emailaddr" value="your e-mail" size=21><input type=submit name="SubmitAct
-ion" VALUE="Subscribe"></td></tr><tr><td><a href="http://www.egroups.com/list/m-an
-nouce/">FindMail List Archive</a></td></tr><tr><td><font face="arial,helvetica">
-<font size=-1>A mailing list hosted by<a href="http://www.makelist.com/">MakeList!
-</a></font></font></td></tr></table></td></tr></table> </form>
-\backslash 
-end{rawhtml}
-\layout Standard
-
-If there are no forms above this line, you need to subscribe by email or
- visit the 
-\latex latex 
-
-\backslash 
-htmladdnormallinkfoot{Mahogany Homepage}{http://www.phy.hw.ac.uk/~karsten/M/}
-\layout Subsection*
-
-Mailing List Archives
-\layout Standard
-
-All three mailing lists are archived at 
-\latex latex 
-
-\backslash 
-htmladdnormallinkfoot{Egroups.com}{http://www.egroups.com/}
+If you want to help further development of Mahogany, please go to the same
+ place and you will find all the information you need about how to contribute
+ or how to contact us.
 \layout Chapter
 
 Compiling 
