--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+07.09.00 KB: Copying messages now uses IMAP server-side copies where available, sooo much faster :-)
 05.09.00 KB: added TwoFish encryption/decryption for passwords
 03.09.00 KB: fixed endless recursion in INBOX listing callback which caused IMAP server
              mailbox import to never complete, updated splash screen, finished config sync
