--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -2467,11 +2467,11 @@ msgstr "Nome da pasta para as mensagens enviadas"
 
 #: wxMDialogs.cpp:2166
 #, fuzzy
-msgid "show succesful test message"
+msgid "show successful test message"
 msgstr "Visualizar a mensagem selecionada"
 
 #: wxMDialogs.cpp:2167
-msgid "ask for confirmation before deleing the address book entries"
+msgid "ask for confirmation before deleting the address book entries"
 msgstr ""
 
 #: wxMDialogs.cpp:2168
