--- a/locale/fr.po
+++ b/locale/fr.po
@@ -2459,11 +2459,11 @@ msgstr "Le répertoire pour la sauvegarde"
 
 #: wxMDialogs.cpp:2166
 #, fuzzy
-msgid "show succesful test message"
+msgid "show successful test message"
 msgstr "Ouvrir le message sélectionné"
 
 #: wxMDialogs.cpp:2167
-msgid "ask for confirmation before deleing the address book entries"
+msgid "ask for confirmation before deleting the address book entries"
 msgstr ""
 
 #: wxMDialogs.cpp:2168
