--- a/locale/it.po
+++ b/locale/it.po
@@ -2434,11 +2434,11 @@ msgstr "Le répertoire pour la sauvegarde"
 
 #: wxMDialogs.cpp:2166
 #, fuzzy
-msgid "show succesful test message"
+msgid "show successful test message"
 msgstr "Le message de test de Mahogany"
 
 #: wxMDialogs.cpp:2167
-msgid "ask for confirmation before deleing the address book entries"
+msgid "ask for confirmation before deleting the address book entries"
 msgstr ""
 
 #: wxMDialogs.cpp:2168
